refatoração 2